Minot titles modifications

--- a/src/workshops/2018-12-01-paw.md
+++ b/src/workshops/2018-12-01-paw.md
@@ -1,16 +1,14 @@
-# 2018 Programmable Audio Workshop PAW: Introduction to Faust
-
-## Building a Simple MIDI Synthesizer
+# Building a Simple MIDI Synthesizer
 
 We are going to build a MIDI synthesizer from scratch (without using the Faust libraries).
 
-### Phase Generator
+## Phase Generator
 
 The first step is to build a _phase generator_ that produces a periodic sawtooth signal between 0 and 1. Here is the signal we want to generate:
 
 <img src="img/phase-sig.png" width="80%" class="mx-auto d-block">
 
-#### Ramp
+### Ramp
 
 In order to produce the above signal we need first to produce a ramp signal
 <img src="img/ramp-sig.png" width="80%" class="mx-auto d-block">
@@ -26,7 +24,7 @@ process = 0.125 : + ~ _;
 You can think of a Faust program as a description of an audio circuit
 where `0.125`, `+` and `_` are *primitives* of the language (predefined elementary audio components), and the other two signs: `:` and `~` are used to connect together these audio components.
 
-#### Semantics
+### Semantics
 
 To understand the above diagram let's annotate it with its mathematical semantics.
 
@@ -46,7 +44,7 @@ We can compute the first values of $y(t)$:
 - $y(8) = y(7) + 0.125 = 9*0.125 = 1.125$
 - ...
 
-#### Phase Signal
+### Phase Signal
 
 How can we transform the above ramp into sawtooth signal ? By removing the integer part of the samples in order to keep only the decimal (fractional) part (`3.14159` -> `0.14159`).
 
@@ -70,7 +68,7 @@ process = 0.125 : (+ : decimalpart) ~ _ ;
 
 We can now listen the produced signal. Just copy and past `decimalpart` and `process` definitions into the [Faust editor](https://faust.grame.fr/tools/editor)
 
-### Controlling the Frequency of the Phase Signal
+## Controlling the Frequency of the Phase Signal
 
 Let's first rearrange our code
 
@@ -104,7 +102,7 @@ and by indicating the desired frequency when we use `phase`:
 process = phase(440);
 ```
 
-### Creating a Sine Wave Oscillator
+## Creating a Sine Wave Oscillator
 
 The next step is to transform above phase generator into a sine wave generator. We will use the `sin` primitive that computes the sine of x (measured in radians). Therefore we start for the phase signal, we multiply it by $2\pi$ to obtain radiants, and compute the sine. The full program is the following:
 
@@ -118,7 +116,7 @@ process = osc(440);
 ```
 <!-- /faust-run -->
 
-### Controlling the Frequency and Gain of the Oscillator
+## Controlling the Frequency and Gain of the Oscillator
 
 The next step is to add some controls on the frequency and gain of the oscillator. We can replace the fixed frequency `440` by a user interface slider:
 
@@ -132,7 +130,7 @@ and add a gain to control the output level of the oscillator:
 process = osc(hslider("freq", 440, 20, 10000, 1)) * hslider("gain", 0.5, 0, 1, 0.01);
 ```
 
-### Adding a Gate Button
+## Adding a Gate Button
 
 In order to prepare our MIDI synthesizer we need to add a gate button so that the sound is only when we press it:
 
@@ -140,7 +138,7 @@ In order to prepare our MIDI synthesizer we need to add a gate button so that th
 process = osc(hslider("freq", 440, 20, 10000, 1)) * hslider("gain", 0.5, 0, 1, 0.01) * button("gate");
 ```
 
-### Adding an Envelope Generator
+## Adding an Envelope Generator
 
 It is a good idea to also add an envelop generator. Here we will use a predefined adsr in the Standard Faust library.
 
@@ -156,7 +154,7 @@ process = osc(hslider("freq", 440, 20, 10000, 1))
 ```
 <!-- /faust-run -->
 
-### Improving the Timbre
+## Improving the Timbre
 
 Instead of playing pure sine waves tones, let's improve the timbre with simple additive synthesis:
 
@@ -167,13 +165,12 @@ process = timbre(hslider("freq", 440, 20, 10000, 1))
         * (button("gate") : en.adsr(0.1,0.1,0.98,0.1));
 ```
 
-### Running as a Polyphonic MIDI Synth
+## Running as a Polyphonic MIDI Synth
 
-To control the synthesizer using MIDI you need to use Chrome. The polyphonic MIDI mode is activated using the drop down menu.
+To control the synthesizer using MIDI you need to use Chrome. The polyphonic MIDI mode is activated using the drop down menu _Poly Voices_ on the left side of the editor. Choose _Computer Keyboard_ as MIDI input to play notes with the computer keyboard, or plug a MIDI keyboard.
 
-<img src="img/poly-mode.png" width="80%" class="mx-auto d-block">
 
-### Adding a Global Effect
+## Adding a Global Effect
 
 A global effect can be added by providing a definition for `effect`.
 
@@ -196,6 +193,3 @@ process = timbre(hslider("freq", 440, 20, 10000, 1))
 effect = dm.zita_light;
 ```
 <!-- /faust-run -->
-
-<img src="img/poly-effect.png" width="80%" class="mx-auto d-block">
-
