101 workshop in progress

--- a/src/workshops/2020-04-10-faust-101.md
+++ b/src/workshops/2020-04-10-faust-101.md
@@ -1,10 +1,16 @@
-# Faust 101 for the cofined
+# Faust 101 for the confined
 
-L'objectif de ce workshop est de se familiariser avec le langage Faust à travers des exemples simples de synthèse sonore. Tous les exemples seront executé dans l'IDE Faust en ligne [https://faustide.grame.fr](https://faustide.grame.fr). Si jamais les sons produits avec l'IDE sont de mauvaise qualité, avec des clics, on peut utiliser l'éditeur en ligne, plus rustique, mais aussi plus léger [https://fausteditor.grame.fr](https://fausteditor.grame.fr)
+The covid-19 containment offers us at least one excellent opportunity to train! If you've always wanted to get into Faust programming but didn't have the time, here's your chance! 
 
-## 1. Super simple
+The objective of this workshop is to familiarize you with the Faust language through very simple examples of sound processing and synthesis. 
+The documentation and the examples we will use can be found here : [https://faustdoc.grame.fr](https://faustdoc.grame.fr). All examples will be run in the online Faust IDE [https://faustide.grame.fr](https://faustide.grame.fr). If ever the sounds produced with the IDE are of poor quality, with some clicks, one can use the online editor, which is more rustic, but also lighter [https://fausteditor.grame.fr](https://fausteditor.grame.fr).
+
+## Super simple examples
 
 Let start with super simple examples.
+
+### The simplest Faust program
+This is the simplest Faust program imaginable. It contains only one line of code: `process = _;`.
 
 <!-- faust-run -->
 ```
@@ -12,4 +18,11 @@ process = _;
 ```
 <!-- /faust-run -->
 
-Bla bla
+Several lessons can be learned from this very simple example:
+
+- a Faust program has at least one definition, that of the keyword `process` which indicates the entry point of the program. 
+- A definition always ends with a `;`. A common mistake is to forget the semicolon at the end of a definition.
+- the `_` sign represents one of the _primitives_ of the language (primitives are the predefined functions of the language). It represents an _audio cable_ that lets the signal pass through without transforming it. This is what one calls in mathematics the _identity_ function, the signal which enters on the left comes out on the right identically. 
+
+Lets try this program using the online Faust IDE...
+
