--- a/src/workshops/2020-04-10-faust-101.md
+++ b/src/workshops/2020-04-10-faust-101.md
@@ -2,7 +2,7 @@
 
 The covid-19 containment offers us at least one excellent opportunity to train! If you've always wanted to get into Faust programming but didn't have the time, here's your chance! 
 
-The objective of this workshop is to familiarize you with the Faust language through very simple examples of sound processing and synthesis. 
+The objective of this workshop is to familiarize you with the Faust language through very simple examples of signal processing and sound synthesis.
 The documentation and the examples we will use can be found here : [https://faustdoc.grame.fr](https://faustdoc.grame.fr). All examples will be run in the online Faust IDE [https://faustide.grame.fr](https://faustide.grame.fr). If ever the sounds produced with the IDE are of poor quality, with some clicks, one can use the online editor, which is more rustic, but also lighter [https://fausteditor.grame.fr](https://fausteditor.grame.fr).
 
 ## Super simple examples
@@ -10,7 +10,7 @@ The documentation and the examples we will use can be found here : [https://faus
 Let start with super simple examples.
 
 ### The simplest Faust program
-This is the simplest Faust program imaginable. It contains only one line of code: `process = _;`.
+This is the simplest Faust program imaginable. It contains only one line of code, thr definition : `process = _;`.
 
 <!-- faust-run -->
 ```
@@ -25,4 +25,49 @@ Several lessons can be learned from this very simple example:
 - the `_` sign represents one of the _primitives_ of the language (primitives are the predefined functions of the language). It represents an _audio cable_ that lets the signal pass through without transforming it. This is what one calls in mathematics the _identity_ function, the signal which enters on the left comes out on the right identically. 
 
 Lets try this program using the online Faust IDE...
+
+### Other primitives: addition
+
+We saw in the previous example the primitive `_`. Faust has a large number of primitives, including all mathematical operations (see ).
+
+The `+` primitive for instance is used to add two signals. It can therefore be used to transform a stereophonic signal (on two channels) into a monophonic signal as in the following example:
+
+
+<!-- faust-run -->
+```
+process = +;
+```
+<!-- /faust-run -->
+
+
+### Other primitives: multiplication
+
+The `*` primitive for instance is used to multiply two signals. 
+
+<!-- faust-run -->
+```
+process = *;
+```
+<!-- /faust-run -->
+
+As you can hear, multiplying the two channels of a signal between them transforms the sound quite drastically.
+
+
+### Parallel composition
+
+Programming in Faust consists in assembling primitive operations to form more or less complex audio circuits. To realize these assemblies Faust has 5 composition operations: `~`, `,`, `;`, `<:`, `:>`.  
+
+Let's first look at the parallel composition represented by the comma `,`. 
+
+
+<!-- faust-run -->
+```
+process = _, _;
+```
+<!-- /faust-run -->
+
+We made a _stereo cable_ and when we play the audio file we now hear it on both speakers.
+
+It is very important to distinguish between _primitives_, such as `_`, `+` or `*`, and _composition operations_ such as `,` or `;`.  _Primitives_ represent operations on audio signals, whereas composition operations are used to link two audio circuits together. In other words, you can write `+` or `*` alone, because they represent valid audio circuits, but you can never write `,` or `:` alone. You must always write `A,B` or `A:B`.
+
 
