--- a/mkdocs/docs/workshops/2020-04-10-faust-101.md
+++ b/mkdocs/docs/workshops/2020-04-10-faust-101.md
@@ -96,6 +96,46 @@ process = _, _;
 
 We made a _stereo cable_ and when we play the audio file we now hear it on both speakers.
 
-It is very important to distinguish between _primitives_, such as `_`, `+` or `*`, and _composition operations_ such as `,` or `;`.  _Primitives_ represent operations on audio signals, whereas composition operations are used to link two audio circuits together. In other words, you can write `+` or `*` alone, because they represent valid audio circuits, but you can never write `,` or `:` alone. You must always write `A,B` or `A:B`.
+It is very important to distinguish between _primitives_, such as `_`, `+` or `*`, and _composition operations_ such as `,` or `;`.  _Primitives_ represent operations on audio signals, whereas composition operations are used to link two audio operations together. In other words, you can write `+` or `*` alone, because they represent valid audio operations, but you can never write `,` or `:` alone because they are used to connect two audio operations You must always write `A,B` or `A:B`.
+
+
+Here is a summary table of the five composition operators:
+
+| Syntax   | Priority  | Association  | Description             |
+| -------- | --------- | ------------ | ----------------------- |
+| `A ~ B`  | 4         | left         | Recursive Composition   |
+| `A , B`  | 3         | right        | Parallel Composition    |
+| `A : B`  | 2         | right        | Sequential Composition  |
+| `A <: B` | 1         | right        | Split Composition       |
+| `A :> B` | 1         | right        | Merge Composition       |
+
+
+
+### Controlling the volume
+
+Let's see an example where we combine three primitives:
+  `_`, `0.1` and `*`,
+with two composition operators:
+`,` and `:`.
+
+The idea here is to lower the volume of the incoming signal to one tenth of its initial value. This is done by multiplying the incoming signal by 0.1:
+
+<!-- faust-run -->
+<div class="faust-run"><img src="exfaust4/exfaust4.svg" class="mx-auto d-block">
+~~~
+
+process = (_, 0.1) : *; // try to replace 0.1 by other values between 0 and 1
+
+~~~
+
+<a href="https://faustide.grame.fr/?code=https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/exfaust4/exfaust4.dsp" target="editor">
+<button type="button" class="btn btn-primary">Try it Yourself >></button></a>
+</div>
+<!-- /faust-run -->
+
+Note that we have used parentheses in this example to clearly mark the order in which things should be done. We start by putting `_` and `0.1` in parallel, and then compose them in sequence with `*`.
+
+But, just as in `(2*3)+7` the parentheses are not really necessary because multiplication takes precedence over addition, one could write `_,0.1:*` directly because parallel composing takes precedence over sequential composing as indicated in the previous table.
+
 
 
