faust 101 in progress

--- a/mkdocs/docs/workshops/2020-04-10-faust-101.md
+++ b/mkdocs/docs/workshops/2020-04-10-faust-101.md
@@ -118,7 +118,7 @@ Let's see an example where we combine three primitives:
 with two composition operators:
 `,` and `:`.
 
-The idea here is to lower the volume of the incoming signal to one tenth of its initial value. This is done by multiplying the incoming signal by 0.1:
+The idea here is to lower the volume of the incoming signal to one tenth of its initial value. This is done by multiplying the incoming signal by `0.1`:
 
 <!-- faust-run -->
 <div class="faust-run"><img src="exfaust4/exfaust4.svg" class="mx-auto d-block">
@@ -135,7 +135,27 @@ process = (_, 0.1) : *; // try to replace 0.1 by other values between 0 and 1
 
 Note that we have used parentheses in this example to clearly mark the order in which things should be done. We start by putting `_` and `0.1` in parallel, and then compose them in sequence with `*`.
 
-But, just as in `(2*3)+7` the parentheses are not really necessary because multiplication takes precedence over addition, one could write `_,0.1:*` directly because parallel composing takes precedence over sequential composing as indicated in the previous table.
+But, just as in `(2*3)+7` were the parentheses are not really necessary because multiplication takes precedence over addition, one could write directly `process = _,0.1 : *;` without the parentheses, because parallel composing takes precedence over sequential composing. The priority of the composition operators is shown in the previous table.
+
+
+
+
+### Controlling the volume with a slider
+
+Instead of controlling the volume by editing the code, it is far more convenient to use a graphical slider. 
+
+<!-- faust-run -->
+<div class="faust-run"><img src="exfaust5/exfaust5.svg" class="mx-auto d-block">
+~~~
+
+process = _, hslider("volume", 0.1, 0, 1, 0.01) : *;
+
+~~~
+
+<a href="https://faustide.grame.fr/?code=https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/exfaust5/exfaust5.dsp" target="editor">
+<button type="button" class="btn btn-primary">Try it Yourself >></button></a>
+</div>
+<!-- /faust-run -->
 
 
 
