--- a/src/workshops/2020-04-10-faust-101.md
+++ b/src/workshops/2020-04-10-faust-101.md
@@ -26,7 +26,7 @@ Several lessons can be learned from this very simple example:
 
 Lets try this program using the online Faust IDE...
 
-### Other primitives: addition
+### Adding two signals
 
 We saw in the previous example the primitive `_`. Faust has a large number of primitives, including all mathematical operations (see ).
 
@@ -40,7 +40,7 @@ process = +;
 <!-- /faust-run -->
 
 
-### Other primitives: multiplication
+### Multiplying two signals
 
 The `*` primitive for instance is used to multiply two signals. 
 
@@ -100,7 +100,22 @@ process = (_, 0.1) : *; // try to replace 0.1 by other values between 0 and 1
 
 Note that we have used parentheses in this example to clearly mark the order in which things should be done. We start by putting `_` and `0.1` in parallel, and then compose them in sequence with `*`.
 
-But, just as in `(2*3)+7` the parentheses are not really necessary because multiplication takes precedence over addition, one could write directly `process = _,0.1 : *;` without the partentheses because parallel composing takes precedence over sequential composing as indicated in the previous table.
+But, just as in `(2*3)+7` were the parentheses are not really necessary because multiplication takes precedence over addition, one could write directly `process = _,0.1 : *;` without the parentheses, because parallel composing takes precedence over sequential composing. The priority of the composition operators is shown in the previous table.
+
+
+
+
+### Controlling the volume with a slider
+
+Instead of controlling the volume by editing the code, it is far more convenient to use a graphical slider. For that purpose we can use a `hslider(...)`, a horizontal slider. It takes five parameters. The first one is the name `"volume"`, then we have the defaut value `0.1`, the mimimun value `0`, the maximum value `1` and a step value `0.1`. So here the default value is `0.1` 
+
+<!-- faust-run -->
+```
+process = _, hslider("volume", 0.1, 0, 1, 0.01) : *;
+```
+<!-- /faust-run -->
+
+
 
 
 
