--- a/mkdocs/docs/workshops/2020-04-10-faust-101.md
+++ b/mkdocs/docs/workshops/2020-04-10-faust-101.md
@@ -33,7 +33,7 @@ Several lessons can be learned from this very simple example:
 
 Lets try this program using the online Faust IDE...
 
-### Other primitives: addition
+### Adding two signals
 
 We saw in the previous example the primitive `_`. Faust has a large number of primitives, including all mathematical operations (see ).
 
@@ -54,7 +54,7 @@ process = +;
 <!-- /faust-run -->
 
 
-### Other primitives: multiplication
+### Multiplying two signals
 
 The `*` primitive for instance is used to multiply two signals. 
 
@@ -142,7 +142,7 @@ But, just as in `(2*3)+7` were the parentheses are not really necessary because 
 
 ### Controlling the volume with a slider
 
-Instead of controlling the volume by editing the code, it is far more convenient to use a graphical slider. 
+Instead of controlling the volume by editing the code, it is far more convenient to use a graphical slider. For that purpose we can use a `hslider(...)`, a horizontal slider. It takes five parameters. The first one is the name `"volume"`, then we have the defaut value `0.1`, the mimimun value `0`, the maximum value `1` and a step value `0.1`. So here the default value is `0.1` 
 
 <!-- faust-run -->
 <div class="faust-run"><img src="exfaust5/exfaust5.svg" class="mx-auto d-block">
@@ -156,6 +156,8 @@ process = _, hslider("volume", 0.1, 0, 1, 0.01) : *;
 <button type="button" class="btn btn-primary">Try it Yourself >></button></a>
 </div>
 <!-- /faust-run -->
+
+
 
 
 
