--- a/src/workshops/2020-04-10-faust-101.md
+++ b/src/workshops/2020-04-10-faust-101.md
@@ -113,6 +113,40 @@ process = _, hslider("volume", 0.1, 0, 1, 0.01) : *;
 ```
 <!-- /faust-run -->
 
+### Structuring the program
+
+ 
+
+<!-- faust-run -->
+```
+monoamp = _, hslider("volume", 0.1, 0, 1, 0.01) : *;
+process = monoamp;
+```
+<!-- /faust-run -->
+
+
+ 
+
+<!-- faust-run -->
+```
+monoamp = _, hslider("volume", 0.1, 0, 1, 0.01) : *;
+stereoamp = monoamp,monoamp;
+
+process = stereoamp;
+```
+<!-- /faust-run -->
+
+Some gui control
+
+<!-- faust-run -->
+```
+monoamp = _, hslider("volume[type:knob]", 0.1, 0, 1, 0.01) : *;
+stereoamp = hgroup("amp", monoamp,monoamp);
+
+process = stereoamp;
+```
+<!-- /faust-run -->
+
 
 
 
