faust 101 more examples

--- a/src/workshops/2020-04-10-faust-101.md
+++ b/src/workshops/2020-04-10-faust-101.md
@@ -125,6 +125,8 @@ process = monoamp;
 <!-- /faust-run -->
 
 
+
+### Stereo Amplifier
  
 
 <!-- faust-run -->
@@ -136,7 +138,7 @@ process = stereoamp;
 ```
 <!-- /faust-run -->
 
-Some gui control
+### Some gui control
 
 <!-- faust-run -->
 ```
