Typos in 2020-04-10-faust-101.md.

--- a/src/workshops/2020-04-10-faust-101.md
+++ b/src/workshops/2020-04-10-faust-101.md
@@ -3,14 +3,14 @@
 The covid-19 containment offers us at least one excellent opportunity to train! If you've always wanted to get into Faust programming but didn't have the time, here's your chance! 
 
 The objective of this workshop is to familiarize you with the Faust language through very simple examples of signal processing and sound synthesis.
-The documentation and the examples we will use can be found here : [https://faustdoc.grame.fr](https://faustdoc.grame.fr). All examples will be run in the online Faust IDE [https://faustide.grame.fr](https://faustide.grame.fr). If ever the sounds produced with the IDE are of poor quality, with some clicks, one can use the online editor, which is more rustic, but also lighter [https://fausteditor.grame.fr](https://fausteditor.grame.fr).
+The documentation and the examples we will use can be found here: [https://faustdoc.grame.fr](https://faustdoc.grame.fr). All examples will be run in the online Faust IDE [https://faustide.grame.fr](https://faustide.grame.fr). If ever the sounds produced with the IDE are of poor quality, with some clicks, one can use the online editor, which is more rustic, but also lighter [https://fausteditor.grame.fr](https://fausteditor.grame.fr).
 
 ## Super simple examples
 
 Let start with super simple examples.
 
 ### The simplest Faust program
-This is the simplest Faust program imaginable. It contains only one line of code, thr definition : `process = _;`.
+This is the simplest Faust program imaginable. It contains only one line of code, the definition: `process = _;`.
 
 <!-- faust-run -->
 ```
@@ -68,7 +68,7 @@ process = _, _;
 
 We made a _stereo cable_ and when we play the audio file we now hear it on both speakers.
 
-It is very important to distinguish between _primitives_, such as `_`, `+` or `*`, and _composition operations_ such as `,` or `;`.  _Primitives_ represent operations on audio signals, whereas composition operations are used to link two audio operations together. In other words, you can write `+` or `*` alone, because they represent valid audio operations, but you can never write `,` or `:` alone because they are used to connect two audio operations You must always write `A,B` or `A:B`.
+It is very important to distinguish between _primitives_, such as `_`, `+` or `*`, and _composition operations_ such as `,` or `;`.  _Primitives_ represent operations on audio signals, whereas composition operations are used to link two audio operations together. In other words, you can write `+` or `*` alone, because they represent valid audio operations, but you can never write `,` or `:` alone because they are used to connect two audio operations. You must always write `A,B` or `A:B`.
 
 
 Here is a summary table of the five composition operators:
@@ -101,8 +101,6 @@ process = (_, 0.1) : *; // try to replace 0.1 by other values between 0 and 1
 Note that we have used parentheses in this example to clearly mark the order in which things should be done. We start by putting `_` and `0.1` in parallel, and then compose them in sequence with `*`.
 
 But, just as in `(2*3)+7` were the parentheses are not really necessary because multiplication takes precedence over addition, one could write directly `process = _,0.1 : *;` without the parentheses, because parallel composing takes precedence over sequential composing. The priority of the composition operators is shown in the previous table.
-
-
 
 
 ### Controlling the volume with a slider
