--- a/src/workshops/2018-12-01-paw.md
+++ b/src/workshops/2018-12-01-paw.md
@@ -66,7 +66,7 @@ From a mathematical point of view that would be perfectly correct, but we will a
 process = 0.125 : (+ : decimalpart) ~ _ ;
 ```
 
-We can now listen the produced signal. Just copy and past `decimalpart` and `process` definitions into the [Faust editor](https://faust.grame.fr/tools/editor)
+We can now listen the produced signal. Just copy and past `decimalpart` and `process` definitions into the [Faust editor](https://fausteditor.grame.fr)
 
 ## Controlling the Frequency of the Phase Signal
 
@@ -140,7 +140,7 @@ process = osc(hslider("freq", 440, 20, 10000, 1)) * hslider("gain", 0.5, 0, 1, 0
 
 ## Adding an Envelope Generator
 
-It is a good idea to also add an envelop generator. Here we will use a predefined adsr in the Standard Faust library.
+It is a good idea to also add an envelop generator. Here we will use a predefined ADSR in the Standard Faust library.
 
 <!-- faust-run -->
 ```
