--- a/src/workshops/2020-04-10-faust-101.md
+++ b/src/workshops/2020-04-10-faust-101.md
@@ -167,7 +167,7 @@ Metadata is information that you put in square brackets in the slider name. For 
 
 <!-- faust-run -->
 ```
-monoamp = _, vslider("volume[type:knob]", 0.1, 0, 1, 0.01) : *;
+monoamp = _, vslider("volume[style:knob]", 0.1, 0, 1, 0.01) : *;
 
 stereoamp = monoamp,monoamp;
 
