--- a/mkdocs/docs/workshops/2020-04-10-faust-101.md
+++ b/mkdocs/docs/workshops/2020-04-10-faust-101.md
@@ -232,7 +232,7 @@ Metadata is information that you put in square brackets in the slider name. For 
 <div class="faust-run"><img src="exfaust9/exfaust9.svg" class="mx-auto d-block">
 ~~~
 
-monoamp = _, vslider("volume[type:knob]", 0.1, 0, 1, 0.01) : *;
+monoamp = _, vslider("volume[style:knob]", 0.1, 0, 1, 0.01) : *;
 
 stereoamp = monoamp,monoamp;
 
