--- a/src/workshops/2020-04-10-faust-101.md
+++ b/src/workshops/2020-04-10-faust-101.md
@@ -175,3 +175,96 @@ process = stereoamp;
 ```
 <!-- /faust-run -->
 
+
+### Syntactic sugar
+
+So far we used the core syntax of Faust. For example to multiply the incomming signal by `0.1` we wrote `_,0.1:*`. For numerical expressions this notation is not always the most convenient and sometime we would prefer to use the more traditional infix notation and write instead `_*0.1`. We can also use the prefixed notation and write `*(0.1)`. 
+
+Let's rewrite the definition of the monoamp using the prefix notation:
+
+<!-- faust-run -->
+```
+monoamp = *(vslider("volume[style:knob]", 0.1, 0, 1, 0.01));
+
+stereoamp = monoamp,monoamp;
+
+process = stereoamp;
+```
+<!-- /faust-run -->
+
+Here is a table of equivalent notations. Keep in mind that infix and prefix expressions are translated to core syntax.
+
+
+
+Here is a table with the same expression in all three syntaxes.
+
+| Expression | Description             |
+| ---------- | ----------------------- |
+| `_,0.1:*`  | core syntax             |
+| `_*0.1`    | infix notation          |
+| `*(0.1)`   | prefix notation         |
+
+These notations can be freely combined. For example, the following expressions are all equivalent:
+
+| Expression | Description             |
+| ------------- | ----------------------- |
+| `*(1-m)`      | prefix + infix notation |
+| `_*(1-m)`     | only infix notation     |
+| `_,(1,m:-):*` | core syntax             |
+
+
+
+### A _mute_ button
+
+We would like to be able to mute the sound completely at the touch of a button, without having to change the volume. 
+
+Let's add a mute stage to our mono amplifier. In order to mute the signal we just have to mutiply it by 0. We will use for that purpose a `checkbox(...)`, a user interface element that produces a signal which is 0 by default and 1 when it is checked. As we want to multiply the signal by 0 when the checkbox is checked we will use `1-checkbox ("mute")`.
+
+<!-- faust-run -->
+```
+mute = *(1-checkbox("mute"));
+
+monoamp = *(vslider("volume[style:knob]", 0.1, 0, 1, 0.01)) : mute;
+
+stereoamp = monoamp,monoamp;
+
+process = stereoamp;
+```
+<!-- /faust-run -->
+
+
+
+### Vertical and horizontal Layout
+
+As can be seen in the previous example, by default, the layout of the elements is vertical. You can change this layout by using  `hgroup(...)` and  `vgroup(...)`. For example to make the layout horizontal you can write:
+
+<!-- faust-run -->
+```
+mute = *(1-checkbox("mute"));
+
+monoamp = *(vslider("volume[style:knob]", 0.1, 0, 1, 0.01)) : mute;
+
+stereoamp = hgroup("Marshall", monoamp,monoamp);
+
+process = stereoamp;
+```
+<!-- /faust-run -->
+
+
+
+### Differentiate the volume of the two channels
+
+To differentiate the volume control of our two channels, we will parametrize monoamp with a channel number `c` which will be used to differentiate the name of each volume control. Note that the name `c` of the parameter must only have one letter to be well interpreted in the slider name `"volume %c[style:knob]"`.
+
+<!-- faust-run -->
+```
+mute = *(1-checkbox("mute"));
+
+monoamp(c) = *(vslider("volume %c[style:knob]", 0.1, 0, 1, 0.01)) : mute;
+
+stereoamp = hgroup("Marshall", monoamp(1),monoamp(2));
+
+process = stereoamp;
+```
+<!-- /faust-run -->
+
