--- a/mkdocs/docs/workshops/2020-04-10-faust-101.md
+++ b/mkdocs/docs/workshops/2020-04-10-faust-101.md
@@ -355,13 +355,83 @@ mute = *(1-checkbox("mute"));
 
 monoamp(c) = *(vslider("volume %c[style:knob]", 0.1, 0, 1, 0.01)) : mute;
 
-stereoamp = hgroup("Marshall", monoamp(1),monoamp(2));
+stereoamp = hgroup("Marshall", monoamp(0),monoamp(1));
 
 process = stereoamp;
 
 ~~~
 
 <a href="https://faustide.grame.fr/?code=https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/exfaust13/exfaust13.dsp" target="editor">
+<button type="button" class="btn btn-primary">Try it Yourself >></button></a>
+</div>
+<!-- /faust-run -->
+
+
+
+
+### Having many channels
+
+We have built a stereo amp, but suppose we wanted to generalize this construction to an arbitrary number of channels. To do so, we will instroduce the `par(i, N, ...)` construction which allows us to put several times an expression in parallel. It is in a way the equivalent of the for() loop of a classical programming language. 
+
+In our case we want to indicate the number of channels of our amplifier.
+
+
+<!-- faust-run -->
+<div class="faust-run"><img src="exfaust14/exfaust14.svg" class="mx-auto d-block">
+~~~
+
+mute = *(1-checkbox("mute"));
+
+monoamp(c) = *(vslider("volume %c[style:knob]", 0.1, 0, 1, 0.01)) : mute;
+
+multiamp(N) = hgroup("Marshall", par(i, N, monoamp(i)));
+
+process = multiamp(2); // try multiamp(4)
+
+~~~
+
+<a href="https://faustide.grame.fr/?code=https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/exfaust14/exfaust14.dsp" target="editor">
+<button type="button" class="btn btn-primary">Try it Yourself >></button></a>
+</div>
+<!-- /faust-run -->
+
+
+## Delays and Feedbacks
+
+In this new section we will see two important notions, that of delay with the `@` primitive, and that of feedback (from a looped circuit) which will require the use of the recursive composition `A~B` which allows to loop the outputs of A into the inputs of B and the outputs of B into the inputs of A.
+
+### Monophonic delay of 1 second
+
+Let's start with a very simple example, a monophonic delay of  1 seconds or 44100 samples. We will use the prefix notation
+
+<!-- faust-run -->
+<div class="faust-run"><img src="exfaust15/exfaust15.svg" class="mx-auto d-block">
+~~~
+
+process = _, 44100 : @;
+
+~~~
+
+<a href="https://faustide.grame.fr/?code=https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/exfaust15/exfaust15.dsp" target="editor">
+<button type="button" class="btn btn-primary">Try it Yourself >></button></a>
+</div>
+<!-- /faust-run -->
+
+Or, using the prefix notation:
+
+
+<!-- faust-run -->
+<div class="faust-run"><img src="exfaust16/exfaust16.svg" class="mx-auto d-block">
+~~~
+
+process = @(44100); 
+// prefix notation
+// equivalent to 
+// process = _, 44100 ; @;
+
+~~~
+
+<a href="https://faustide.grame.fr/?code=https://faustdoc.grame.fr/workshops/2020-04-10-faust-101/exfaust16/exfaust16.dsp" target="editor">
 <button type="button" class="btn btn-primary">Try it Yourself >></button></a>
 </div>
 <!-- /faust-run -->
