--- a/src/workshops/2020-04-10-faust-101.md
+++ b/src/workshops/2020-04-10-faust-101.md
@@ -387,7 +387,7 @@ We can calculate the first values of \(y(t)\):
 - \(y(8) = y(7) + 0.125 = 9*0.125 = 1.125\)
 - ...
 
-### Signal de phase
+### Phase signal
 
 How do I turn the above ramp into a sawtooth signal? By deleting the whole part of the samples in order to keep only the decimal part: \(3.14159\rightarrow 0.14159\).
 
@@ -702,7 +702,7 @@ transformation = @(0) : *(hslider("gain", 0, -0.95, 0.95, 0.01));
 <!-- /faust-run -->
 
 
-### Example 8 : filtre en peigne
+### Example 8 : comb filter
 
 
 <!-- faust-run -->
@@ -883,7 +883,7 @@ string(coef, freq, t60, level, trig) = no.noise*level
 ```
 import("stdfaust.lib");
 
-// FM: Frequency moulation
+// FM: Frequency modulation
 
 FM(fc,fm,amp) = fm : os.osc : *(amp) : +(1) : *(fc) : os.osc;
 
