--- a/src/workshops/2020-04-10-faust-101.md
+++ b/src/workshops/2020-04-10-faust-101.md
@@ -905,7 +905,7 @@ process = FM(
 ```
 import("stdfaust.lib");
 
-// FM: Frequency moulation 2
+// FM: Frequency modulation 2
 
 FM(fc,fm,amp) = fm : os.osc : *(amp) : +(1) : *(fc) : os.osc;
 
